Tue Mar 13 14:17:52 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2800_Regression/nsmain.cpp:
        * orbsvcs/tests/Bug_2800_Regression/server.cpp:
          Wait on the thread manager until all tasks are ready

Tue Mar 13 12:19:58 UTC 2007  Steve Huston  <shuston@riverace.com>

        * MPC/config/tao_vc8warnings.mpb: Reversed the defaults for VC8
          STL deprecated warnings since Ossama added the checked iterator
          stuff.

Tue Mar 13 09:55:52 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DynUnion_Test/*:
          New DynUnion test, thanks to M. Arshad Khan
          <khan dot m dot arshad at gmail dot com>
          for creating this test. According to the reporter this failed with 1.5
          but it works on svn head without problems.

Mon Mar 12 22:29:32 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/checked_iterator.h:

          Moved to ACE.

        * tao/Generic_Sequence_T.h:
        * tao/Unbounded_Octet_Sequence_T.h:

          Updated include directives.  The checked_iterator.h header is
          now in ACE.

          Updated checked iterator factory function calls to use new name,
          ACE_make_checked_array_iterator.

        * tao/Object_Reference_Traits_T.h (copy_range):
        * tao/String_Traits_T.h (copy_range):

          Made this trait method a member template to simplify support for
          checked destination iterators.

        * tao/Makefile.am:
        * tao/tao.mpc:

          Removed tao/checked_iterator.h header from the appropriate
          header lists.  It has been moved to ACE.

Mon Mar 12 21:35:25 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * tao/TAO_Internal.cpp:

          Fixed compilation errors on WinCE 5.0 builds.

Mon Mar 12 21:03:15 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/checked_iterator.h (TAO_checked_array_iterator):
